2004-05-31  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/tie-performer.cc (stop_translation_timestep): reset
	ties_created_. Fixes: midi-tie.ly, midi-lyrics-barcheck.ly

	* lily/chord-tremolo-engraver.cc (stop_translation_timestep):
	clear repeat_ directly after setting stem_tremolo_. Fixes:
	tremolo-repeat.ly

	* input/regression/span-bar-break.ly: new file.

	* scm/define-grobs.scm (all-grob-descriptions): remove
	break-visibility from SpanBar. Fixes: piano-repeat.ly

2004-05-30  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* python/lilylib.py (make_ps_images): only compute bbox when needed.

	* scripts/lilypond-book.py (process_snippets): use lily -f ps
	files for generating pngs. (failed experiment)

	* scm/framework-ps.scm (output-classic-framework-ps): dump EPS
	file with PFA fonts included.

	* lily/score.cc (default_rendering): put header in too.

	* lily/paper-line.cc (LY_DEFINE): change function to
	ly:paper-line-extent

	* scm/page-layout.scm (default-book-title): only add lines for
	non-nil fields.
	(default-score-title): idem.

	* lily/my-lily-parser.cc (parse_string): delete lexer after use.

	* lily/my-lily-lexer.cc (My_lily_lexer): copy keytable.

	* lily/include/paper-book.hh (class Paper_book): remove height_
	member.

	* input/test/coriolan-margin.ly (texidoc): remove latex macros.

	* lily/ly-module.cc (LY_DEFINE): bugfix.

	* lily/paper-book.cc (book_title): separate function for the book
	title.

	* scm/page-layout.scm (default-book-title): only account for
	markup fields.

	* scm/framework-ps.scm: new file. Move high level interface from
	output-ps.scm

	* scm/music-functions.scm (def-grace-function): move macros from
	ly/music-functions-init.ly

	* lily/paper-outputter.cc (Paper_outputter): move scheme_calls to
	framework-tex.scm

	* scm/framework-tex.scm (dump-line): new file. High level
	interface for output (pages, systems, header). 

	* lily/include/page.hh (class Page): add is_last_ field.
